{
    "name": "Player1",
    "maps": [
        {
            "name": "NaveCnt",
            "id": "c7211a76-004c-45a5-a904-0750a4593b63",
            "actions": [
                {
                    "name": "Disparar",
                    "type": "Button",
                    "id": "fed73dda-b5f3-4f98-9100-eddd07c6cab4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveKey",
                    "type": "Value",
                    "id": "488a46c7-7dda-424e-903e-4f6d46f67b1b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveH",
                    "type": "Value",
                    "id": "bb41b8ba-4b88-4d12-b52a-0a74b14989b4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveV",
                    "type": "Value",
                    "id": "53b318ca-bf3b-4cf4-864d-2d687898966f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e185f8cb-8f3e-4cf2-9998-36853e330184",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Disparar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b01f1431-ce81-47b5-a61e-8f530016620c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Disparar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "919dc977-c28a-4044-aee2-e26f08869640",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKey",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7dc085fa-c256-4c3b-b9ce-f35c7cea07cd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKey",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3dc937b9-65e0-4349-9e23-7cdc9b702cff",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKey",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f824a465-2b5c-4449-aef7-d8fb9726a621",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKey",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f7620345-fd5f-4c69-bca1-edfff50679fa",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveKey",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a8e4fc81-8fb1-4406-ac92-4b6a41132734",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveV",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6274443-a277-4d0b-8787-34bd13a977b9",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveH",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CamCnt",
            "id": "d6bf9226-c8ea-410c-964a-d33bbeb6190a",
            "actions": [
                {
                    "name": "RotX",
                    "type": "Value",
                    "id": "713a9f59-81b1-42e3-bf71-478f4206cae0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotY",
                    "type": "Value",
                    "id": "91cdb656-a9a1-440c-a0aa-fd56fe7e586e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7701f2e7-f5ab-4207-b678-3840d502f022",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65fddc3d-e921-4f06-a558-f498940be155",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}